--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "e2e": "ng e2e",
     "lender:api": "json-server --watch ./api/lender.js --routes ./api/routes.json --port=3001",
     "borrower:api": "json-server --watch ./api/borrower.js --routes ./api/routes.json --port=3002",
+    "json:api": "json-server --watch ./api/lender.json --port=3003",
+
     "relation:api": "json-server --watch ./api/relations.js --routes ./api/routes.json",
     "dev": "concurrently \"npm run start\" \"npm run lender:api\" \"npm run borrower:api\" \"npm run relation:api\""
   },
@@ -25,6 +27,7 @@
     "@angular/router": "~9.0.2",
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
+    "json-server": "^0.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
