--- a/package.json
+++ b/package.json
@@ -20,10 +20,19 @@
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
     "@angular/forms": "~9.0.2",
+    "@angular/localize": "^9.0.7",
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "bootstrap": "^4.4.1",
+    "gijgo-angular-wrappers": "^1.9.13",
+    "jquery": "^3.4.1",
     "json-server": "^0.16.1",
+    "jw-angular-pagination": "^1.1.0",
+    "jw-paginate": "^1.0.4",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
