--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vaadin/vaadin": "^15.0.2",
     "@vaadin/vaadin-date-picker": "^4.0.8",
     "bootstrap": "^4.4.1",
+    "crypto-random-string": "^3.2.0",
     "gijgo-angular-wrappers": "^1.9.13",
     "jquery": "^3.4.1",
     "json-server": "^0.16.1",
@@ -36,6 +37,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^12.0.0",
+    "randomstring": "^1.1.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
