--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "aws-deploy": "aws s3 sync dist/eledgerui/ s3://e-ledger",
     "lender:api": "json-server --watch ./api/lender.json --routes ./api/routes.json --port=3001",
     "borrower:api": "json-server --watch ./api/borrower.json --routes ./api/routes.json --port=3002",
     "relation:api": "json-server --watch ./api/relation.json --routes ./api/routes.json",
