--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jw-angular-pagination": "^1.1.0",
     "jw-paginate": "^1.0.4",
     "ng-bootstrap": "^1.6.3",
+    "ng-otp-input": "^1.7.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^12.0.0",
