--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ng-bootstrap": "^1.6.3",
     "ng-otp-input": "^1.7.0",
     "ng2-search-filter": "^0.5.1",
+    "ngx-long-press": "0.0.1",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^12.0.0",
     "randomstring": "^1.1.5",
