--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "json-server": "^0.16.1",
     "jw-angular-pagination": "^1.1.0",
     "jw-paginate": "^1.0.4",
+    "nexmo": "^2.6.0",
     "ng-bootstrap": "^1.6.3",
     "ng-otp-input": "^1.7.0",
     "ng2-search-filter": "^0.5.1",
@@ -45,6 +46,7 @@
     "rxjs": "~6.5.4",
     "ts-md5": "^1.2.7",
     "tslib": "^1.10.0",
+    "twilio": "^3.43.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -56,7 +58,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.33",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.38",
     "codelyzer": "^5.1.2",
     "concurrently": "^5.1.0",
     "html-webpack-plugin": "^4.0.0",
